cabal-version:      2.4
name:               mobile-wallet-backend
version:            0.1.0.0
author:             Sławomir Śledź
maintainer:         slawomir.sledz@gmail.com
extra-source-files: CHANGELOG.md

library
    exposed-modules:  MyLib
    build-depends:    base >=4.9 && < 5
    hs-source-dirs:   src
    build-depends:
      cardano-api
    default-language: Haskell2010

executable mobile-wallet-backend
    main-is:          Main.hs
    build-depends:
        base >=4.9 && < 5,
        mobile-wallet-backend

    hs-source-dirs:   app
    default-language: Haskell2010
