cabal-version:      2.4
name:               mobile-wallet-backend
version:            0.1.0.0
author:             BinarApps
maintainer:         BinarApps

common lang
    default-language:   Haskell2010
    ghc-options:
      -Wall -O2 -flate-specialise -fspecialise-aggressively

library
    import: lang
    exposed-modules:  
        App  
      , CommandLine
    hs-source-dirs:   src
    build-depends:
        base >=4.9 && < 5
      , aeson
      , aeson-pretty
      , optparse-applicative
      , bytestring
      , containers
      , cardano-api

executable mobile-wallet-backend
    import: lang
    main-is:          Main.hs
    build-depends:
        base >=4.9 && < 5,
        mobile-wallet-backend

    hs-source-dirs:   app
