cabal-version:      2.4
name:               mobile-wallet-backend
version:            0.1.0.0
author:             BinarApps
maintainer:         BinarApps

common lang
    default-language:   Haskell2010
    ghc-options:
      -Wall -O2 -flate-specialise -fspecialise-aggressively

library
    import: lang
    extensions:
        NoImplicitPrelude
      , OverloadedStrings
      , GeneralizedNewtypeDeriving
      , ConstraintKinds
      , FlexibleContexts
    exposed-modules:  
        App
      , Domain.Wallet
      , Logger
      , Adapter.HTTP.Main
      , Adapter.CardanoNode.Wallet
      , Config  
      , CommandLine
    hs-source-dirs:   src
    build-depends:
        base >=4.9 && < 5
      , classy-prelude  
      , aeson
      , aeson-pretty
      , optparse-applicative
      , cardano-api
      , ouroboros-network
      , mtl
      , servant
      , servant-server
      , wai
      , wai-cors
      , warp
      , conferer
      , conferer-dhall
      , conferer-warp
      , co-log
      , text-conversions



executable mobile-wallet-backend
    import: lang
    main-is:          Main.hs
    build-depends:
        base >=4.9 && < 5,
        mobile-wallet-backend

    hs-source-dirs:   app
